[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/tilesets/1bit_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/ScoreHUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/HealthHUD.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 3.33914, 0, 0, 0, 0, 0, 217.044, 0, 0, 0, 0, 0, 217.044, 280.548, 0, 0, 0, 0, 3.33914, 280.548, 0, 0, 0, 0, 3.33914, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 64
collision_mask = 4
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 16, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 15, 0, 15, 0, 0, 16, 0, 0, 17, 17, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 18, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 65548, 16, 0, 65549, 14, 0, 65550, 16, 0, 65551, 16, 0, 65552, 16, 0, 65553, 0, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 16, 0, 131085, 0, 0, 131086, 0, 0, 131087, 16, 0, 131088, 14, 0, 131089, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 3, 0, 196611, 2, 0, 196612, 2, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 196622, 0, 0, 196623, 16, 0, 196624, 0, 0, 196625, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 2, 0, 262148, 2, 0, 262149, 3, 0, 262150, 2, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 15, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 5, 0, 327696, 0, 0, 327697, 0, 0, 393216, 7, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 458752, 5, 0, 458753, 5, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 2, 0, 458762, 3, 0, 458763, 2, 0, 458764, 2, 0, 458765, 3, 0, 458766, 2, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 524288, 16, 0, 524289, 6, 0, 524290, 5, 0, 524291, 5, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 14, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 3, 0, 524306, 2, 0, 589824, 7, 0, 589825, 5, 0, 589826, 6, 0, 589827, 5, 0, 589828, 5, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 18, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 573, 297 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 58.6249, 136 )
scale = Vector2( 4.00552, 1.19766 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 3.33914, 0 )

[node name="Pickups" type="Node" parent="."]

[node name="Mobs" type="Node" parent="."]

[node name="Projectiles" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreHUD" parent="Control" instance=ExtResource( 5 )]

[node name="HealthHUD" parent="Control" instance=ExtResource( 6 )]

[connection signal="score" from="." to="Control/ScoreHUD" method="_on_Main_score"]
[connection signal="killed" from="Player" to="." method="_on_Player_killed"]
[connection signal="player_health" from="Player" to="Control/HealthHUD" method="_on_Player_player_health"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
